accessibility fixes for hero, drawer overlap fix

--- a/app/styles/partials/components.scss
+++ b/app/styles/partials/components.scss
@@ -423,3 +423,46 @@ blockquote > footer {
 #calendar {
   margin: 20px 0;
 }
+
+/** Accessibility enhancements - July 13, 2021 **/
+
+#indicators-container {
+
+
+  position: absolute;
+  bottom: 20px;
+  width: auto;
+  display: block;
+  /* margin: 0; */
+  padding: 0;
+  margin-left: 50%;
+  min-width: 74px;
+  z-index: 999999;
+  
+  .carousel-indicators {
+    /* min-width: 20px; */
+    margin: 0;
+    padding: 0;
+    position: relative;
+    left: unset;
+    width: auto;
+    display: block;
+    float: left;
+    bottom: 0;
+  }
+
+  #toggleCarousel {
+    min-width: 20px;
+    margin: 0 10px;
+    /* padding: 0; */
+    position: relative;
+    /* left: unset; */
+    /* width: 10px; */
+    display: block;
+    z-index: 9000;
+    float: right;
+    bottom: -1px;
+  }
+
+}
+
