--- a/app/styles/partials/ucsd/cms/_drawer.scss
+++ b/app/styles/partials/ucsd/cms/_drawer.scss
@@ -3,6 +3,7 @@
  */
 .drawer-wrapper {
 	margin-bottom: 1em;
+	clear: both;
 }
 
 .drawer {
